--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,22 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: autodeploy
+  name: autodeploy215
   labels:
-    app: autodeploy
-  namespace: namespace-workflow-1692811819315
+    app: autodeploy215
+    kubernetes.azure.com/generator: devhub
+  namespace: namespace-workflow-1717258074126
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: autodeploy
+      app: autodeploy215
   template:
     metadata:
       labels:
-        app: autodeploy
+        app: autodeploy215
     spec:
       containers:
-        - name: autodeploy
-          image: acrworkflow1692811819315.azurecr.io/image-workflow-1692811819315:latest
+        - name: autodeploy215
+          image: acrworkflow1717258074126.azurecr.io/image-workflow-1717258074126:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 5000
