--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: autodeploy
-  namespace: namespace-workflow-1692811819315
+  name: autodeploy215
+  namespace: namespace-workflow-1717258074126
+  labels:
+    kubernetes.azure.com/generator: devhub
 spec:
   type: LoadBalancer
   selector:
-    app: autodeploy
+    app: autodeploy215
   ports:
     - protocol: TCP
       port: 5000
